v1.0.0/modules/schema/pages/class/Priority.adoc
= `Priority`
:toclevels: 4


+++Priority definition.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:Priority`


| CIM standard (perspective)
| IEC61968 (Enterprise)



|===

== Class hierarchy
* *`Priority`*


== Slots




[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<justification,`justification`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Justification for 'rank'.+++

| <<rank,`rank`>>
| 0..1
| https://w3id.org/linkml/Integer[`integer`]
| +++Priority level; lower number means high priority inside the same 'type'.+++

| <<type,`type`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Type describing 'rank'; e.g., high, emergency, etc.+++
|===

'''


//[discrete]
[#justification]
=== `justification`
+++Justification for 'rank'.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Priority.justification`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

//[discrete]
[#rank]
=== `rank`
+++Priority level; lower number means high priority inside the same 'type'.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Priority.rank`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Integer[`integer`]


|===

//[discrete]
[#type]
=== `type`
+++Type describing 'rank'; e.g., high, emergency, etc.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Priority.type`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===


